--- a/docs/docs/css/reference.css
+++ b/docs/docs/css/reference.css
@@ -1,5 +1,6 @@
 html {
 	scroll-padding-top: 5em;
+    overflow: auto;
 }
 
 h2 {
